<resources>
    <string name="app_name">Comics</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_bookcase">Bookshelf</string>
    <string name="title_me">Me</string>
    <string name="descriptionCoverImage">Cover Image</string>
    <string name="recent_news">title toolbar</string>
    <string name="comic_name">Comic name</string>
    <string name="title_search">item search</string>
    <string name="input_name_comic">Input Name Comic</string>
    <string name="not_find">Sorry, but have not comic you want to find!</string>
    <string name="title_for_name_current_chapter">Current chapter :</string>
    <string name="history_bookshelf">History</string>
    <string name="follow_bookshelf">Follow</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="loading">loading…</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="retry">Retry</string>
    <string name="login_loading">login…</string>
    <string name="register">Don\'t have an account? Sign up</string>
    <string name="thumbnail">thumbnail</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">UserName</string>
    <string name="your_name">Your Name</string>
    <string name="your_birthday">Your Birthday</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="personal_information">Personal Information</string>
    <string name="gender">Gender</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_your_new_password">Confirm your new password</string>
    <string name="log_account_out_of_device">Log account out of device</string>
    <string name="log_out">Log out</string>
    <string name="confirm_log_out">Do you want to log out?</string>
    <string name="agree">Agree</string>
    <string name="click_to_sign_in_or_sign_up">Click to sign in or sign up</string>
    <string name="read_continue">Đọc tiếp</string>
    <string name="un_follow">Đã bỏ theo dõi truyện này</string>
    <string name="follow">Đã theo dõi truyện này</string>
</resources>
